force-app/main/default/objects/SalesRevenue__c/SalesRevenue__c.object-meta.xml
<CustomObject>
    <label>매출</label>
    <nameField>
        <label>Sales Revenue Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>