force-app/main/default/objects/SalesRevenue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Revenue (Account)</relationshipLabel>
    <relationshipName>Sales_Revenue1</relationshipName>
    <type>Lookup</type>
</CustomField>