force-app/main/default/objects/SalesRevenue__c/fields/BillingDocumentNo__c.field-meta.xml
<CustomField>
    <fullName>BillingDocumentNo__c</fullName>
    <label>Billing Document No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>