force-app/main/default/objects/SalesRevenue__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Revenue</relationshipLabel>
    <relationshipName>Sales_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>