force-app/main/default/objects/SalesRevenue__c/fields/EndCustomer__c.field-meta.xml
<CustomField>
    <fullName>EndCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>EndCustomer__c</referenceTo>
    <relationshipLabel>Sales Revenue</relationshipLabel>
    <relationshipName>Sales_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>