force-app/main/default/objects/SalesRevenue__c/fields/FulfillmentOrderItem__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order Item</label>
    <referenceTo>FulfillmentOrderItem__c</referenceTo>
    <relationshipLabel>Sales Revenue</relationshipLabel>
    <relationshipName>Sales_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>