force-app/main/default/objects/SalesRevenue__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>Product Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>