force-app/main/default/objects/SalesRevenue__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>