force-app/main/default/objects/SalesRevenue__c/fields/ShippingCondition__c.field-meta.xml
<CustomField>
    <fullName>ShippingCondition__c</fullName>
    <label>Shipping Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>