force-app/main/default/objects/SalesRevenue__c/fields/ShipToAccount__c.field-meta.xml
<CustomField>
    <fullName>ShipToAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Revenue</relationshipLabel>
    <relationshipName>Sales_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>